PumaTX_RC/PumaTX_RC03/Compiling error.txt


MLX.cpp:49:9: error: expected initializer before '.' token

 void MLX.begin(){

         ^

MLX.cpp:83:9: error: expected initializer before '.' token

 void MLX.beginRight(){ //0x0D

         ^

Plusieurs bibliothèque trouvées pour "WiFi.h"
Utilisé : C:\Users\Nicolas DG\AppData\Local\Arduino15\packages\esp32\hardware\esp32\1.0.3-rc1\libraries\WiFi
Non utilisé : C:\Program Files (x86)\Arduino\libraries\Stock_WiFi
exit status 1
C:\Users\Nicolas DG\Desktop\PumaTX\PumaTX_RC\PumaTX_RC03\PumaTX_RC03.ino: In function 'void setup()':

PumaTX_RC03:192:6: error: expected unqualified-id before '.' token

   MLX.begin();

      ^

C:\Users\Nicolas DG\Desktop\PumaTX\PumaTX_RC\PumaTX_RC03\PumaTX_RC03.ino: In function 'void loop()':

PumaTX_RC03:315:6: error: expected unqualified-id before '.' token

   MLX.process();

      ^

expected initializer before '.' token